[package]
name = "macrotk-core"
version = "0.1.1"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "macrotk core types and functions."
readme = "../README.md"
license = "Unlicense"
documentation = "https://docs.rs/macrotk-core"
repository = "https://github.com/frostu8/macrotk.git"
homepage = "https://github.com/frostu8/macrotk"
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = "1"

