[package]
name = "macrotk-derive"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = "1"

[dependencies.macrotk-core]
version = "0.1.0"
path = "../macrotk-core"

