[package]
name = "macrotk-derive"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "macrotk core derive macros."
readme = "../README.md"
license = "Unlicense"
documentation = "https://docs.rs/macrotk-derive"
repository = "https://github.com/frostu8/macrotk.git"
homepage = "https://github.com/frostu8/macrotk"
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = "1"

[dependencies.macrotk-core]
version = "0.1.0"
path = "../macrotk-core"

