[package]
name = "macrotk"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "Macro toolkit"
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = "1"

