[package]
name = "macrotk"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "The Rust macro toolkit."
license = "Unlicense"
readme = "../README.md"
documentation = "https://docs.rs/macrotk"
repository = "https://github.com/frostu8/macrotk.git"
homepage = "https://github.com/frostu8/macrotk"
categories = ["development-tools::procedural-macro-helpers"]

[dependencies.macrotk-core]
version = "0.1.0"
path = "../macrotk-core"

[dependencies.macrotk-derive]
version = "0.1.0"
path = "../macrotk-derive"

[dev-dependencies]
trybuild = "1.0"
